update: edit and delete on Thread,edit avatar on profile
